auction-deployment-requirments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction
spec:
  selector:
    matchLabels:
      app: auction
  template:
    metadata:
      labels:
        app: auction
    spec:
      containers:
      - name: auction
        image: makingthehand/auction
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
