deployment-requirements.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  selector:
    matchLabels:
      app: "goserver"
  replicas: 1
  template:
    metadata:
      name: "goserver"
      labels:
        app: "goserver"
    spec:
      containers:
        - name: "goserver"
          image: "makingthehand/hello-go:v5.2"

          resources:
            requests:
              cpu: "0.05"
              memory: 20Mi
            limits:
              cpu: "0.05"
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 3
            failureThreshold: 30
            #initialDelaySeconds: 10

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 3
            failureThreshold: 1
            #initialDelaySeconds: 10

          livenessProbe:
             httpGet:
               path: /healthz
               port: 8080
             periodSeconds: 5
             failureThreshold: 1
             timeoutSeconds: 1
             successThreshold: 1
             #initialDelaySeconds: 10

          volumeMounts:
            - mountPath: "/go/requirements"
              name: config
             #readOnly: true
            - mountPath: "/go/pvc"
              name: goserver-volume

      volumes:
        - name: goserver-volume
          persistentVolumeClaim:
            claimName: goserver-pvc
        - name: config 
          configMap:
            name: goserver-configmap-requirements
            items:
            - key: requirements
              path: "requirements.txt"
