auction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-service
spec:
  selector:
    app: auction
  type: ClusterIP
  ports:
  - name: auction-service
    port: 8080
    targetPort: 8080
    protocol: TCP
