service-mysql-h.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
  
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
  clusterIP: None
