kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
        - path: /vehicles
          pathType: Prefix
          backend:
            service:
              name: auction-service
              port:
                number: 8080
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goserver-service
            port:
              number: 8080
